--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,145 @@
+:root {
+  --wine: #810b6ede;
+  --light-green-: #99fffabe;
+}
+
+body{
+  position: relative;
+}
+
+.sectionmenubar {
+  color: var(--wine);
+}
+
+.aboutsection {
+  background-color: var(--light-green);
+  font-size: 1.15rem;
+  box-shadow: rgba(3, 59, 214, 0.3) 0px 0px 0px 3px;
+  border: 2px solid rgb(220, 167, 231);
+  padding: 10px;
+  border-radius: 9px;
+}
+.aboutsection:hover {
+  animation: movable 1s ease infinite;
+}
+
+@keyframes movable {
+  50% {
+    background-image: radial-gradient(at center, #34dbd3, #f9f9f9);
+  }
+  100% {
+    background-image: radial-gradient(at center, #d684ab, #f9f9f9);
+  }
+}
+
+@media (max-width: 414px) {
+  .graphic-1 {
+    display: none;
+  }
+}
+h1:hover,
+.shake:hover {
+  animation: shake 3s;
+  animation-iteration-count: infinite;
+  font-weight: bold;
+}
+
+@keyframes turnable {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(90deg);
+  }
+  75% {
+    transform: rotateX(270deg);
+  }
+  100% {
+    transform: rotateX(359deg);
+  }
+}
+#borderforcontact {
+  border: 2px solid rgb(185, 183, 221);
+  padding: 10px;
+  border-radius: 9px;
+}
+.soumyaimage {
+  border: 2px solid rgb(168, 111, 214);
+  border-radius: 200%;
+  padding: 7px;
+}
+
+.soumyaimage:hover {
+  box-shadow: rgba(230, 14, 132, 0.897) 0px -50px 36px -28px inset;
+}
+svg:hover,
+h2:hover{animation: turnable 3s ease 2;}
+
+
+.bounce {
+  animation: bounce 3s ease infinite;
+}
+@keyframes bounce {
+  70% {
+    transform: translateY(0%);
+  }
+  80% {
+    transform: translateY(-15%);
+  }
+  90% {
+    transform: translateY(0%);
+  }
+  95% {
+    transform: translateY(-7%);
+  }
+  97% {
+    transform: translateY(0%);
+  }
+  99% {
+    transform: translateY(-3%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+
+
 
